--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,9 @@
 					</li>
 				<% end %>
 				<li>
+					<a class="page-scroll" href="/events/" rel="nofollow" data-no-turbolink>活動通</a>
+				</li>
+				<li>
 					<a class="page-scroll" href="/books/" rel="nofollow">二手書</a>
 				</li>
 				<li class="dropdown">
