--- a/app/views/course_maps/index.html.erb
+++ b/app/views/course_maps/index.html.erb
@@ -22,7 +22,7 @@
 		
 	<div class="col-md-10 col-md-offset-1 panel panel-default">
 		<div class="panel-body" id="cm-desc" style="margin-left:5.4%;margin-right:2.4%;">			
-			<h4 class="text-center"><%=params[:not_found] ? "尚無資訊!!尋找同學幫忙中:( 請在下方留言!!" : "請選擇系所及入學年度"%></h4>
+			<h4 class="text-center"><%=params[:not_found] ? "尚無資訊!!尋找同學幫忙中 請在下方留言!!" : "請選擇系所及入學年度"%></h4>
 		</div>
 		<div id="QandA" style="">
 				<h3><strong>問題回報區</strong></h3>
