--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,9 +26,10 @@
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/departments" rel="nofollow" style="color:white;">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
 						<% end %>							
 							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/course_maps/" rel="nofollow" style="color:white;">課程地圖</a></li>							
+							<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;"><a href="/admin/ee105" rel="nofollow" style="color:white;">電機105級畢業學分預審</a></li>
 							<!--
 							<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
-							<li><a href="/admin/ee104" rel="nofollow">電機104級畢業學分預審</a></li>
+							
 							-->							
 						</ul>	
 					</li>
@@ -36,6 +37,7 @@
 				<li>
 					<a class="page-scroll" href="/books/" rel="nofollow">二手書</a>
 				</li>
+				
 				<li class="dropdown">
 					<a class="">全校課程</a>
 					<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
@@ -49,7 +51,12 @@
 							<a href="/past_exams/" style="color:white;">考古題</a>
 						</li>
 					</ul>
-				</li>				
+				</li>
+				<!--
+				<li>
+					<a class="page-scroll" href="/course_maps/<%=current_user.try(:course_maps).try(:first).try(:id)%>" data-no-turbolink>課程地圖</a>
+				</li>
+				-->
 				<li>
 					<a class="page-scroll" href="/courses/simulation" data-no-turbolink>模擬排課</a>
 				</li>
