past_exams college category ver1

--- a/app/views/past_exams/index.html.erb
+++ b/app/views/past_exams/index.html.erb
@@ -1,50 +1,197 @@
+<style>
+	#college-selector > tbody >tr > td {
+		border-left: 1px #ccc solid;
+		padding: 4px;
+	}
+	/*#link-group  > tbody >tr > td {
+		border-left: 1px #ccc solid;
+		//border-bottom: 1px #ccc solid;
+		padding: 4px;
+	}
+	#link-group {
+		border-left: 2px #f5f5f5 solid;
 
-<%= search_form_for @q, url:"/past_exams/", class:"form-inline" do |f| %>
-	<div class="col-md-12 text-center">	
-		<%=link_to "上傳考古題","/past_exams/upload", class:"btn btn-sm btn-info", style:"font-size:16px;","data-no-turbolink"=>"true" %>
-		<div class="input-group" >
-			<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"課名/老師/檔名",style:"width:350px;" %>
-			<span class="input-group-btn">
-				<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
-			</span><!-- /btn-group -->
-		</div><!-- /input-group -->
+	}*/
+	#college-table .active{
+		background-color: #337ab7;
+	}
+	#college-table .active > a{
+		color: #fff;
+	}
+	/*#blue-menu{
+		background: #222d3f;
+	}*/
+</style>
+<!--
+	<%= search_form_for @q, url:"/past_exams/", class:"form-inline" do |f| %>
+		<div class="col-md-12 text-center">					
+			<div class="input-group" >
+				<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"課名/老師/檔名",style:"width:350px;" %>
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
+				</span>
+			</div>
+			<% if params[:q].present? %>
+				<% params[:q].each do |key,value| %>
+					<%=hidden_field_tag "q[#{key}]",value %>
+				<% end %>
+			<% end %>
+		</div>
+	<% end %>
+<div class="col-md-12 text-center" style="margin-bottom:-10px;">
+	<table id="college-selector" class="table table-bordere bg-white">
+		<tr>
+			<td><%=link_to "共同課程","?q[departments_college_id_eq]=0"%></td>
+			<td><%=link_to "資訊學院","?q[colleges_id_eq]=3"%></td>
+			<td><%=link_to "電機學院","?q[colleges_id_eq]=5"%></td>
+			<td><%=link_to "工學院","?q[colleges_id_eq]=4"%></td>
+			<td><%=link_to "理學院","?q[colleges_id_eq]=9"%></td>
+			<td><%=link_to "光電學院","?q[colleges_id_eq]=8"%></td>
+			<td><%=link_to "生科學院","?q[colleges_id_eq]=2"%></td>
+			<td><%=link_to "管理學院","?q[colleges_id_eq]=7"%></td>
+			<td><%=link_to "人社學院","?q[colleges_id_eq]=1"%></td>			
+			<td><%=link_to "客家文化學院","?q[colleges_id_eq]=6"%></td>
+		</tr>
+	</table>
+</div>
+-->
+<div class="col-md-3 well" id="blue-menu">
+	<!--<table id="link-group" class="table text-center" style="margin-top:-19px;margin-left:-19px;min-width:115%;" >
+		<tr>
+			<td>
+				<%=link_to "上傳考古題","/past_exams/upload", class:"btn btn-sm btn-info", style:"font-size:16px;","data-no-turbolink"=>"true" %>
+			</td>
+			<td >
+				<%=link_to "我的考古題","/past_exams/?mine=true", class:"btn btn-sm btn-primary", style:"font-size:16px;","data-no-turbolink"=>"true" %>
+			</td>
+		</tr>
+	</table>-->
+	
+	<%= search_form_for @q, url:"/past_exams/", class:"form-inline" do |f| %>
+							
+			<div class="col-md-12 input-group" >
+				<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"課名/老師/檔名",style:"/*width:350px;*/" %>
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
+				</span><!-- /btn-group -->
+			</div><!-- /input-group -->
+			<% if params[:q].present? %>
+				<% params[:q].each do |key,value| %>
+					<%=hidden_field_tag "q[#{key}]",value %>
+					<script>$("#<%=key%>_<%=value%>").addClass("active");</script>
+				<% end %>
+			<% end %>	
+	<% end %>
+	<br>
+	<div class="row">
+	<table id="link-group" class="table table-bordered text-center" style="" >
+		<tr>
+			<td>
+				<%=link_to "上傳考古題","/past_exams/upload", class:"btn btn-sm btn-info", style:"font-size:14px;","data-no-turbolink"=>"true" %>
+			</td>
+			<td >
+				<%=link_to "我的考古題","/past_exams/?mine=true", class:"btn btn-sm btn-primary", style:"font-size:14px;","data-no-turbolink"=>"true" %>
+			</td>
+		</tr>
+	</table>
 	</div>
-<% end %>	
-<br>
-<br>
+	<h4 class="text-center" style="margin-top:-5px">分類</h4>
+	<div class="row">
+		<table id="college-table" class="table table-bordered bg-white">
+			<tr class="list-grou text-center">		
+				<td class="col-md-2 clickable-hover" id="departments_college_id_eq_0"><%=link_to "共同課程","?q[departments_college_id_eq]=0",class:"list-group-ite"%></td>
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_3"><%=link_to "資訊學院","?q[colleges_id_eq]=3",class:"list-group-ite"%></td>
+			</tr>
+			<tr class="list-grou text-center">
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_5"><%=link_to "電機學院","?q[colleges_id_eq]=5",class:"list-group-ite"%></td>
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_4"><%=link_to "工學院","?q[colleges_id_eq]=4",class:"list-group-ite"%></td>
+			</tr>
+			<tr class="list-grou text-center">
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_9"><%=link_to "理學院","?q[colleges_id_eq]=9",class:"list-group-ite"%></td>
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_8"><%=link_to "光電學院","?q[colleges_id_eq]=8",class:"list-group-ite"%></td>
+			</tr>
+			<tr class="list-grou text-center">
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_2"><%=link_to "生科學院","?q[colleges_id_eq]=2",class:"list-group-ite"%></td>
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_7"><%=link_to "管理學院","?q[colleges_id_eq]=7",class:"list-group-ite"%></td>
+			</tr>
+			<tr class="list-grou text-center">
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_1"><%=link_to "人社學院","?q[colleges_id_eq]=1",class:"list-group-ite"%></td>
+				<td class="col-md-2 clickable-hover" id="colleges_id_eq_6"><%=link_to "客家文化學院","?q[colleges_id_eq]=6",class:"list-group-ite"%></td>
+			</tr>
+		</table>
+	</div>
+	<!--
+	<div class="row">
+		<div class="list-group text-center">		
+			<%=link_to "共同課程","?q[departments_college_id_eq]=0",id:"departments_college_id_eq_0",class:"list-group-item"%>
+			<%=link_to "資訊學院","?q[colleges_id_eq]=3",id:"colleges_id_eq_3",class:"list-group-item"%>
+			<%=link_to "電機學院","?q[colleges_id_eq]=5",id:"colleges_id_eq_5",class:"list-group-item"%>
+			<%=link_to "工學院","?q[colleges_id_eq]=4",id:"colleges_id_eq_4",class:"list-group-item"%>
+			<%=link_to "理學院","?q[colleges_id_eq]=9",id:"colleges_id_eq_9",class:"list-group-item"%>
+			<%=link_to "光電學院","?q[colleges_id_eq]=8",id:"colleges_id_eq_8",class:"list-group-item"%>
+			<%=link_to "生科學院","?q[colleges_id_eq]=2",id:"colleges_id_eq_2",class:"list-group-item"%>
+			<%=link_to "管理學院","?q[colleges_id_eq]=7",id:"colleges_id_eq_7",class:"list-group-item"%>
+			<%=link_to "人社學院","?q[colleges_id_eq]=1",id:"colleges_id_eq_1",class:"list-group-item"%>			
+			<%=link_to "客家文化學院","?q[colleges_id_eq]=6",id:"colleges_id_eq_6",class:"list-group-item"%>
+		</div>
+	</div>
+	-->
+	<h4 class="text-center" style="margin-top:-5px">最新動態</h4>
+	<div class="row">
+		<div class="list-group">
+		<% @recent.each do |recent|%>
+			<a href="<%=recent[:url]%>" class="list-group-item list-group-item" target="blank">
+				<%=distance_of_time_in_words(Time.now,recent[:time])%>前 <%=recent[:user_name]%>上傳了 <%=recent[:ct_name]%>的考古題
+			</a>			
+		<% end %>
+		<!--
+			<li class="list-group-item list-group-item-danger">
+				2015/11/05 13:40 正規語言 正在競標中
+			</li>
+		-->
+		</div>
+	</div>
+</div>
+<div class="col-md-9">
 <table class="table table-hover bg-white-transparen" id="course_table" style="background-color:white;" >
 	<tr class="row">
-		<th>課程/教授</th>
-		<th>學期</th>
-		<th>檔名</th>
+		<th class="col-md-3">課程/教授</th>
+		<th class="col-md-1">學期</th>
+		<th class="col-md-2">檔名</th>
 		<th>描述</th>
 		<th>上傳者</th>
-		<th>下載次數</th>
-		<th>時間</th>
+		<!--<th class="col-md-1">下載次數</th>-->
+		<!--<th>時間</th>-->
 	</tr>
 <% if @exams.empty? %>
 	<tr class="row">
-		<td class="col-md-12" colspan="5"><h4 class="text-center">查無檔案!</h4></td>
+		<td class="col-md-12" colspan="7"><h4 class="text-center">查無檔案!</h4></td>
 	</tr>
 <% else %>
 	<% @exams.each do |exam| %>
 		<tr id="exam-<%=exam.id%>" class="row clickable-row clickable-hover" href="/past_exams/<%=exam.id%>">
-			<td class="ct_name"><%=exam.course.ch_name%>/<%=exam.course_teachership.teacher_name%></td>
-			<td class=""><%=exam.semester_name%></td>
-			<td><%=exam.upload_file_name%></td>
+			<td class="col-md-3"><%=exam.course.ch_name%>/<%=exam.course_teachership.teacher_name%></td>
+			<td class="col-md-1"><%=exam.semester_name%></td>
+			<td class="col-md-2"><%=exam.upload_file_name%></td>
 			<td class="title"><%=exam.description%></td>		
-			<td class="user_name"><%=exam.is_anonymous ? "匿名" : exam.try(:user).try(:name)%></td>
-			<td><%=exam.download_times%></td>
-			<td class="time"><%=exam.created_at%></td>
+			<td class="user_name"><%=exam.owner_name%></td>
+			<!--<td class="col-md-1"><%=exam.download_times%></td>-->
+			<!--<td class="time"><%=exam.created_at%></td>-->
 		</tr>
 	<% end %>
 <% end %>
 </table>
+
 <%= paginate @exams, :window=>2 %>
+</div>
 <script>
 	$(function(){
+		$("#college-table").find("td").click(function(){
+			$(this).find("a")[0].click();
+			//console.log($(this).find("a"));
+		});
 		$(".clickable-row").click(function() {
-			goToHref($(this).attr("href"),false);
+			goToHref($(this).attr("href"),true);
 		});
 		
 	});
